content/classes/2.4/Viewport.md
---
ID_PAGE: 25244
PG_TITLE: Viewport
PG_VERSION: 2.1
---
## Description

class [Viewport](/classes/2.4/Viewport)



## Constructor

## new [Viewport](/classes/2.4/Viewport)(x, y, width, height)

Builds a new [Viewport](/classes/2.4/Viewport) object

#### Parameters
 | Name | Type | Description
---|---|---|---
 | x | number |    The initial x coordinate of the upper-left pixel of the viewport
 | y | number |    The initial y coordinate of the upper-left pixel of the viewport
 | width | number |    The initial width of the viewport
## Members

### x : number

The pixel x coordinate of the upper-left corner of the viewport on the render-target surface

### y : number

The pixel y coordinate of the upper-left corner of the viewport on the render-target surface

### width : number

The width of the viewport on the render-target surface in pixels

### height : number

The height of the  viewport on the render-target surface in pixels

## Methods

### toGlobal(renderWidth, renderHeight) &rarr; [Viewport](/classes/2.4/Viewport)



#### Parameters
 | Name | Type | Description
---|---|---|---
 | renderWidth | number | 
 | renderHeight | number | 
